seppet alignment fix

--- a/src/app/hiring-manager/components/pages/job-details/candidate-info/candidate-info.component.scss
+++ b/src/app/hiring-manager/components/pages/job-details/candidate-info/candidate-info.component.scss
@@ -151,7 +151,7 @@
   .line {
     z-index: 7;
     border-top: 2px dotted #7086fd;
-    width: 8.5rem;
+    width: 8.3rem;
     position: relative;
     top: -18px; /* Adjusts the line to align with the center of the circle */
   }
@@ -181,7 +181,7 @@
   }
 
   .interview-status {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
   }
 
